--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "lint": "eslint ./"
   },
   "author": "",
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint && npm run test"
+    }
+  },
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -37,6 +42,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.0.5",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
