--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
+    "react-axe": "^3.3.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
